cabal-version:      3.0
name:               rg-for-cube
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edmund Noble
maintainer:         edmundnoble@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable rg-for-cube
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.1.0,
        filepath,
        directory-ospath-streaming,
        optparse-applicative,
        regex-base,
        regex-tdfa,
        text,
        bytestring,
        async,
        os-string,
        file-io,
        directory,
        primitive,
        chronos,
        torsor,
        unordered-containers,
        containers,
        hashable,
        lens,
        unliftio
    hs-source-dirs:   app
    default-extensions:
        ApplicativeDo
        TemplateHaskell
        PartialTypeSignatures
    ghc-options:
        -Wall
        -Wno-missing-signatures
        -Wmissing-exported-signatures
        -Wno-partial-type-signatures
        -ddump-simpl
        -dsuppress-coercions
        -ddump-to-file
        -threaded
        -rtsopts
        "-with-rtsopts=-N"
    default-language: GHC2024
